syntax = "proto3";
package types;
option go_package = "github.com/rigochain/rigo-go/ctrlers/types";

message GovParamsProto {
  int64   version = 1;
  int64   max_validator_cnt = 2;
  bytes   _gas_price = 3;
  bytes   _reward_per_power = 4;
  int64   lazy_reward_blocks = 5;
  int64   lazy_applying_blocks = 6;
  uint64  min_trx_gas = 7;
  uint64  max_trx_gas = 8;
  uint64  max_block_gas = 9;
  int64   min_voting_period_blocks = 10;
  int64   max_voting_period_blocks = 11;
  int64   min_self_stake_ratio = 12;
  int64   max_updatable_stake_ratio = 13;
  int64   slash_ratio = 14;
  bytes   _min_validator_stake = 15;
  int64   signed_blocks_window = 16;
  int64   min_signed_blocks = 17;
}